# GoQuant-Assignment

./: .gitignore  CMakeLists.txt  README.md  app.py  requirements.txt  vcpkg.json
include/models/: FeeModel.h  InputParams.h  MarketImpactModel.h  ModelProcessor.h  OrderBook.h  OutputMetrics.h  SimulationModel.h  SlippageModel.h  WebSocketClient.h
include/ui/: InputPanel.h  OutputPanel.h  UIState.h
include/ws_client/: OrderBook.h  WebSocketClient.h
models/: maker_taker_model.py  market_impact.py  slippage_model.py
src/: main.cpp
src/models/: FeeModel.cpp  MarketImpactModel.cpp  ModelProcessor.cpp  OrderBook.cpp  OutputMetrics.cpp  SimulationModel.cpp  SlippageModel.cpp  WebSocketClient.cpp
src/ui/: InputPanel.cpp  OutputPanel.cpp  imgui.cpp  imgui.h  imgui_internal.h  imgui_widgets.cpp
src/ui/backend/: imgui_impl_glfw.cpp
utils/: fee_model.py  latency_tracker.py  websocket_client.py
